// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-accordion> Component basic usage 1`] = `

<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component expand multiple items: false 1`] = `

<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component expand multiple items: true 1`] = `

<bolt-accordion multiple>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component spacing: large 1`] = `

<bolt-accordion spacing="large">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--large"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--large"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--large"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component spacing: medium 1`] = `

<bolt-accordion spacing="medium">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component spacing: none 1`] = `

<bolt-accordion spacing="none">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--none"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--none"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--none"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component spacing: small 1`] = `

<bolt-accordion spacing="small">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--small"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--small"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--small"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;

exports[`<bolt-accordion> Component spacing: xsmall 1`] = `

<bolt-accordion spacing="xsmall">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--xsmall"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--xsmall"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <replace-with-children class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
                             id="c-bolt-accordion-item-inner-12345"
      >
        <replace-with-children class="c-bolt-accordion-item__trigger">
          <replace-with-grandchildren>
            <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--xsmall"
                   for="c-bolt-accordion-item-12345"
            >
              <replace-with-children class="c-bolt-accordion-item__trigger-content">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </replace-with-children>
            </label>
          </replace-with-grandchildren>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </replace-with-children>
        <replace-with-grandchildren class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall">
            This is the accordion content.
          </div>
        </replace-with-grandchildren>
      </replace-with-children>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>

`;
